hardcode wimage sizes

--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -14,10 +14,12 @@ const { variant } = Astro.props;
     <div class="isolate relative flex justify-center">
       <Brush
         id="1"
-        class="absolute z-0 top-0 left-0 w-[210px] h-[249px] rotate-[-90deg] translate-x-[20px] translate-y-[-20px]"
+        width={210}
+        height={249}
+        class="absolute z-0 top-0 left-0 rotate-[-90deg] translate-x-[20px] translate-y-[-20px]"
       />
-      <PictureYuna width="85px" height="210px" class="relative z-10 mr-3" />
-      <PictureDaniela width="85px" height="210px" class="relative z-10" />
+      <PictureYuna width={85} height={210} class="relative z-10 mr-3" />
+      <PictureDaniela width={85} height={210} class="relative z-10" />
     </div>
   )
 }
@@ -27,10 +29,12 @@ const { variant } = Astro.props;
     <div class="isolate relative flex ">
       <Brush
         id="1"
-        class="absolute z-0 top-[-30px] left-0 w-[352px] h-[418px] rotate-[-165.467deg] translate-x-[-10px]"
+        width={352}
+        height={418}
+        class="absolute z-0 top-[-30px] left-0 rotate-[-165.467deg] translate-x-[-10px]"
       />
-      <PictureYuna width="156px" height="384px" class="relative z-10 mr-4" />
-      <PictureDaniela width="156px" height="384px" class="relative z-10" />
+      <PictureYuna width={156} height={384} class="relative z-10 mr-4" />
+      <PictureDaniela width={156} height={384} class="relative z-10" />
     </div>
   )
 }
