--- a/src/components/images/Yuna.astro
+++ b/src/components/images/Yuna.astro
@@ -5,7 +5,7 @@ const { width, height, class: cssClasses } = Astro.props;
 ---
 
 <Image
-  srcSet={["images/yuna.png", "images/yuna.avif", "images/yuna.webp"]}
+  srcSet={["/images/yuna.png", "/images/yuna.avif", "/images/yuna.webp"]}
   alt="Yuna Orsini"
   width={width}
   height={height}
