--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -73,7 +73,7 @@ const { block1, block2 } = data;
             <ul class="flex items-center justify-between">
               <li>
                 <Image
-                  srcSet={["images/access42.png"]}
+                  srcSet={["/images/access42.png"]}
                   width="80"
                   height="58"
                   alt="Logo du cabinet de conseil français expert en accessibilité numérique Access42"
@@ -81,7 +81,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/IDF.png"]}
+                  srcSet={["/images/IDF.png"]}
                   alt=""
                   width="170"
                   height="56"
@@ -90,7 +90,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/w3c.png"]}
+                  srcSet={["/images/w3c.png"]}
                   width="90"
                   height="46"
                   alt="Logo du W3C"
@@ -98,7 +98,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/opquast.png"]}
+                  srcSet={["/images/opquast.png"]}
                   width="140"
                   height="36"
                   alt="Logo de l'organisme de certification Opquast"
@@ -106,7 +106,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/uxer.png"]}
+                  srcSet={["/images/uxer.png"]}
                   width="46"
                   height="47"
                   alt="Logo de l'agence digitale UXER"
@@ -114,7 +114,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/shifta.png"]}
+                  srcSet={["/images/shifta.png"]}
                   width="106"
                   height="40"
                   alt="Logo de l'université SHIFTA"
@@ -122,7 +122,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/INR.png"]}
+                  srcSet={["/images/INR.png"]}
                   width="120"
                   alt="Logo de l'institut du numérique responsable"
                   height="44"
@@ -139,7 +139,7 @@ const { block1, block2 } = data;
             <ul class="flex items-center gap-[44px]">
               <li>
                 <Image
-                  srcSet={["images/diseno-etico.png"]}
+                  srcSet={["/images/diseno-etico.png"]}
                   width="90"
                   height="49"
                   alt="Logo de l'association Desino Etico"
@@ -147,7 +147,7 @@ const { block1, block2 } = data;
               </li>
               <li>
                 <Image
-                  srcSet={["images/designers-ethiques.png"]}
+                  srcSet={["/images/designers-ethiques.png"]}
                   width="105"
                   height="49"
                   alt="Logo de l'association Designers Éthiques"
