--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -20,7 +20,7 @@ import Profile from "./Profile.astro";
             id="1"
             class="absolute z-[-1] w-[142px] left-0 bottom-0 rotate-[180deg]"
           />
-          <Yuna width="89" height="220" />
+          <Yuna width={89} height={220} />
         </div>
       </Profile>
     </div>
@@ -34,7 +34,7 @@ import Profile from "./Profile.astro";
             id="2"
             class="absolute z-[-1] w-[164px] left-0 bottom-[11px] rotate-[90deg]"
           />
-          <Daniela width="89" height="220" />
+          <Daniela width={89} height={220} />
         </div>
       </Profile>
     </div>
