--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -1,6 +1,6 @@
 ---
 import Grid from "../../@common/Grid.astro";
-import dataIntroduction from "../../../data/notre-manifeste/introduction.yaml";
+import data from "../../../data/notre-manifeste/introduction.yaml";
 import Brush from "../../@common/Brush.astro";
 import BackgroundForm1 from "../../BackgroundForm1.astro";
 ---
@@ -23,7 +23,7 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
-              {dataIntroduction.content}
+              {data.content}
             </p>
           </div>
         </div>
