--- a/src/components/pages/notre-manifeste/Signature.astro
+++ b/src/components/pages/notre-manifeste/Signature.astro
@@ -10,14 +10,18 @@ import Image from "../../@common/Image.astro";
   <div class="flex justify-center gap-8">
     <div class="flex flex-col items-center gap-4">
       <Image
-        srcSet={["images/signature-yuna.png"]}
+        srcSet={["/images/signature-yuna.png"]}
+        width={210}
+        height={111}
         alt="Signature de Yuna Orsini"
       />
       <span class="text-label-medium-bold">Yuna Orsini</span>
     </div>
     <div class="flex flex-col items-center gap-4">
       <Image
-        srcSet={["images/signature-daniela.png"]}
+        srcSet={["/images/signature-daniela.png"]}
+        width={210}
+        height={111}
         alt="Signature de Yuna Orsini"
       />
       <span class="text-label-medium-bold">Daniela Peñaranda</span>
