fix toast message

--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -163,7 +163,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                                 <ButtonCopyText
                                   type="secondary"
                                   textToCopy={`${currentPath}#${definition.slug}`}
-                                  toastCopySuccessText="URL Copiée !"
+                                  toastCopySuccessText="L’URL a été copiée dans votre presse-papiers !"
                                 >
                                   Copier notre adresse email dans votre
                                   presse-papiers
