--- a/src/components/pages/homepage/Expertises/Expertise.astro
+++ b/src/components/pages/homepage/Expertises/Expertise.astro
@@ -16,7 +16,7 @@ const { expertise } = Astro.props;
   <ul class="flex flex-col gap-0.5">
     {
       expertise.skills.map((skill) => {
-        return <li class="text-body-medium bg-surface5">{skill}</li>;
+        return <li class="text-body-medium bg-surface5 rounded">{skill}</li>;
       })
     }
   </ul>
