target blank on linkedin links

--- a/src/components/pages/nos-deux-profils/Profile.astro
+++ b/src/components/pages/nos-deux-profils/Profile.astro
@@ -64,6 +64,7 @@ const { profile } = Astro.props;
     <CallToAction
       type="secondary"
       href={profile.linkedInCallToAction.link}
+      target="_blank"
       rightIcon="open_in_new"
     >
       {profile.linkedInCallToAction.label}
