--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const { class: cssClasses } = Astro.props;
 
 <footer class:list={["container", "mb-[70px]", cssClasses]}>
   <Grid as="nav">
-    <div class="xl:col-start-2 xl:col-span-2">
+    <div class="2xl:col-start-2 2xl:col-span-2">
       <CallToAction
         href="https://www.linkedin.com/company/team-ux/"
         target="_blank"
@@ -22,7 +22,7 @@ const { class: cssClasses } = Astro.props;
         Team UX sur LinkedIn
       </CallToAction>
     </div>
-    <div class="xl:col-span-2">
+    <div class="2xl:col-span-2">
       <ul class="flex flex-col gap-4">
         <li>
           <CallToAction
@@ -44,7 +44,7 @@ const { class: cssClasses } = Astro.props;
         </li>
       </ul>
     </div>
-    <div class="xl:col-span-2">
+    <div class="2xl:col-span-2">
       <ul class="flex flex-col gap-4">
         <li>
           <CallToAction
