--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -8,12 +8,12 @@ import Expertise from "./Expertise.astro";
 <section class="relative container mb-[140px]">
   <Grid>
     <h2
-      class="xl:col-start-2 xl:col-span-full text-headline-medium text-neutral1 mb-10"
+      class="2xl:col-start-2 2xl:col-span-full text-headline-medium text-neutral1 mb-10"
     >
       {data.title}
     </h2>
 
-    <ul class="xl:col-start-2 xl:col-span-5 flex flex-col gap-8">
+    <ul class="2xl:col-start-2 2xl:col-span-5 flex flex-col gap-8">
       {
         data.expertises.map((expertise, index) => {
           return (
