--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -12,12 +12,12 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
     />
 
     <Grid>
-      <h1 class="xl:col-start-2 xl:col-span-9 mb-8 text-display-large">
+      <h1 class="2xl:col-start-2 2xl:col-span-9 mb-8 text-display-large">
         Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
           >designers UX seniors en freelance</span
         >
       </h1>
-      <div class="xl:col-start-2 xl:col-span-6">
+      <div class="2xl:col-start-2 2xl:col-span-6">
         <p class="our-work mb-5 text-body-extra-large">
           Notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
@@ -32,7 +32,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
           Découvrir nos projets
         </CallToAction>
       </div>
-      <div class="xl:col-start-9 xl:col-span-3">
+      <div class="2xl:col-start-9 2xl:col-span-3">
         <div class="relative mt-[67px]">
           <DuoDeChoc variant="big" />
         </div>
