--- a/src/components/pages/homepage/Testimonials/index.astro
+++ b/src/components/pages/homepage/Testimonials/index.astro
@@ -11,7 +11,7 @@ import Testimonial from "../../../Testimonial.astro";
     {
       data.testimonials.map((testimonial) => {
         return (
-          <li class="xl:col-span-4">
+          <li class="2xl:col-span-4">
             <Testimonial testimonial={testimonial} />
           </li>
         );
