--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -10,7 +10,7 @@ import Profile from "./Profile.astro";
 
 <section class="container mb-[140px]">
   <Grid>
-    <div class="xl:col-start-2 xl:col-span-5">
+    <div class="2xl:col-start-2 2xl:col-span-5">
       <Profile profile={dataYuna}>
         <div
           slot="picture"
@@ -24,7 +24,7 @@ import Profile from "./Profile.astro";
         </div>
       </Profile>
     </div>
-    <div class="xl:col-span-5">
+    <div class="2xl:col-span-5">
       <Profile profile={dataDaniela}>
         <div
           slot="picture"
