--- a/src/components/pages/notre-manifeste/Actions.astro
+++ b/src/components/pages/notre-manifeste/Actions.astro
@@ -4,22 +4,22 @@ import Grid from "../../@common/Grid.astro";
 import Brush from "../../@common/Brush.astro";
 ---
 
-<section class="container xl:mb-[60px]">
+<section class="container 2xl:mb-[60px]">
   <Grid>
-    <h2 class="xl:col-start-2 xl:col-span-6 mb-10 text-display-small">
+    <h2 class="2xl:col-start-2 2xl:col-span-6 mb-10 text-display-small">
       {data.title}
     </h2>
-    <p class="xl:col-start-2 xl:col-span-8 text-body-extra-large mb-20">
+    <p class="2xl:col-start-2 2xl:col-span-8 text-body-extra-large mb-20">
       {data.introduction}
     </p>
-    <div class="xl:col-start-2 xl:col-span-10">
-      <ul class="xl:columns-2 xl:gap-8 xl:space-y-5">
+    <div class="2xl:col-start-2 2xl:col-span-10">
+      <ul class="2xl:columns-2 2xl:gap-8 2xl:space-y-5">
         {
           data.actions.map((action) => {
             return (
               <li class="break-inside-avoid	flex flex-col gap-5 p-10 bg-surface7 rounded-[26px]">
                 <h3 class="text-headline-medium-bold">{action.title}</h3>
-                <p class="xl:mr-10 text-body-medium">{action.content}</p>
+                <p class="2xl:mr-10 text-body-medium">{action.content}</p>
               </li>
             );
           })
