--- a/src/components/pages/notre-manifeste/Hero.astro
+++ b/src/components/pages/notre-manifeste/Hero.astro
@@ -8,12 +8,12 @@ import data from "../../../data/notre-manifeste/hero.yaml";
     showBackgroundForm={false}
     title={data.title}
     subtitle={data.content}
-    class="xl:mb-[-97px]"
+    class="2xl:mb-[-97px]"
   />
 </div>
 
 <style>
   div :global(h2) {
-    @apply xl:col-start-2 xl:col-span-7;
+    @apply 2xl:col-start-2 2xl:col-span-7;
   }
 </style>
