--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -5,10 +5,10 @@ import Brush from "../../@common/Brush.astro";
 import BackgroundForm1 from "../../BackgroundForm1.astro";
 ---
 
-<section class="overflow-hidden xl:mt-[-287px] xl:mb-[-75px]">
-  <div class="container xl:pt-[287px] pb-[308px]">
+<section class="overflow-hidden 2xl:mt-[-287px] 2xl:mb-[-75px]">
+  <div class="container 2xl:pt-[287px] pb-[308px]">
     <Grid>
-      <div class="xl:col-start-2 xl:col-span-6 mt-[68px]">
+      <div class="2xl:col-start-2 2xl:col-span-6 mt-[68px]">
         <div class="isolate relative">
           <Brush
             id="1"
