--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -25,7 +25,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
 ---
 
 <div class="project flex gap-8 p-10 bg-neutral4 rounded-[26px]">
-  <div class="flex flex-col gap-10 xl:flex-[0_0_40%]">
+  <div class="flex flex-col gap-10 2xl:flex-[0_0_40%]">
     <div>
       <p class="mb-2.5 text-headline-medium-bold">
         {project.title}
