--- a/src/components/pages/temoignages/Testimonials.astro
+++ b/src/components/pages/temoignages/Testimonials.astro
@@ -4,7 +4,7 @@ import Testimonial from "../../Testimonial.astro";
 ---
 
 <section class="container">
-  <ul class="xl:columns-3 xl:gap-8 xl:space-y-5">
+  <ul class="2xl:columns-3 2xl:gap-8 2xl:space-y-5">
     {
       data.map((testimonial) => {
         return (
