--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -18,11 +18,11 @@ const { as: HTMLTag = "div", outerGap = true, class: cssClasses } = Astro.props;
     "gap-x-5",
     "grid-cols-4",
     "md:grid-cols-8",
-    "xl:gap-x-8",
-    "xl:grid-cols-12",
+    "2xl:gap-x-8",
+    "2xl:grid-cols-12",
     {
       "px-5": outerGap,
-      "xl:px-0": outerGap,
+      "2xl:px-0": outerGap,
     },
     cssClasses,
   ]}
