--- a/src/components/pages/glossaire-ux-design/Hero.astro
+++ b/src/components/pages/glossaire-ux-design/Hero.astro
@@ -12,6 +12,6 @@ import CommonPageHero from "../../CommonPageHero.astro";
 
 <style>
   div :global(h2) {
-    @apply xl:col-start-2 xl:col-span-7 text-body-medium;
+    @apply 2xl:col-start-2 2xl:col-span-7 text-body-medium;
   }
 </style>
