--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -19,27 +19,27 @@ const {
 
     <h2 class="mb-20 text-display-small text-center">{data.title}</h2>
     <Grid as="ul" class="gap-y-5 mb-[60px]">
-      <li class="xl:col-start-2 xl:col-span-7 isolate relative">
+      <li class="2xl:col-start-2 2xl:col-span-7 isolate relative">
         <Brush
           id="3"
           class="absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
         />
         <Teasing content={teasing1} />
       </li>
-      <li class="xl:col-start-4 xl:col-span-4">
+      <li class="2xl:col-start-4 2xl:col-span-4">
         <Teasing content={teasing2} />
       </li>
-      <li class="xl:col-start-8 xl:col-span-4 isolate relative">
+      <li class="2xl:col-start-8 2xl:col-span-4 isolate relative">
         <Brush
           id="3"
           class="absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
         />
         <Teasing content={teasing3} />
       </li>
-      <li class="xl:col-start-2 xl:col-span-5">
+      <li class="2xl:col-start-2 2xl:col-span-5">
         <Teasing content={teasing4} />
       </li>
-      <li class="xl:col-start-7 xl:col-span-4">
+      <li class="2xl:col-start-7 2xl:col-span-4">
         <Teasing content={teasing5} />
       </li>
     </Grid>
