--- a/src/components/pages/notre-manifeste/Convictions.astro
+++ b/src/components/pages/notre-manifeste/Convictions.astro
@@ -4,12 +4,12 @@ import Grid from "../../@common/Grid.astro";
 import Brush from "../../@common/Brush.astro";
 ---
 
-<section class="container xl:mb-[144px]">
+<section class="container 2xl:mb-[144px]">
   <Grid>
-    <h2 class="xl:col-start-2 xl:col-span-6 mb-10 text-display-small">
+    <h2 class="2xl:col-start-2 2xl:col-span-6 mb-10 text-display-small">
       {data.title}
     </h2>
-    <div class="xl:col-start-2 xl:col-span-5 relative isolate">
+    <div class="2xl:col-start-2 2xl:col-span-5 relative isolate">
       <Brush
         id="1"
         class="absolute z-[-1] w-[250px] h-[297px] top-[260px] right-[-110px] rotate-[-45deg]"
@@ -24,7 +24,7 @@ import Brush from "../../@common/Brush.astro";
             return (
               <li class="flex flex-col gap-5 p-10 bg-surface5 rounded-[4px] first:rounded-[26px_26px_4px_4px] last:rounded-[4px_4px_26px_26px]">
                 <h3 class="text-headline-medium-bold">{conviction.title}</h3>
-                <p class="xl:mr-10 text-body-medium">{conviction.content}</p>
+                <p class="2xl:mr-10 text-body-medium">{conviction.content}</p>
               </li>
             );
           })
