--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -5,7 +5,7 @@ import CallToAction from "../../@common/CallToAction.astro";
 
 <section class="container mt-20">
   <Grid>
-    <div class="xl:col-start-2 xl:col-span-6">
+    <div class="2xl:col-start-2 2xl:col-span-6">
       <div class="flex flex-col gap-5 p-10 bg-neutral4 rounded-[26px]">
         <h2 class="text-headline-small">Arborescence principale :</h2>
         <ul class="ml-7 list-disc list-outside">
