--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,10 @@ const { title } = Astro.props;
         font-display: swap;
       }
 
+      html {
+        -webkit-font-smoothing: antialiased;
+      }
+
       body {
         @apply bg-surface1 text-secondary;
       }
