--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -8,24 +8,6 @@ const htmlAttributes =
   pathname === "/" ? {} : { href: "/", title: "Retour à l'accueil" };
 ---
 
-<HTMLTag {...htmlAttributes} class="logo">
-  <Icon width={56} height={40} name="logo" />
-  <span>Team UX</span>
+<HTMLTag {...htmlAttributes}>
+  <Icon width={170} height={36} name="logo" />
 </HTMLTag>
-
-<style>
-  .logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    & span {
-      @apply text-primary;
-
-      font-size: 28px;
-      letter-spacing: 0.42px;
-      line-height: normal;
-      font-weight: 700;
-    }
-  }
-</style>
