--- a/src/components/Header/components/NavItem.astro
+++ b/src/components/Header/components/NavItem.astro
@@ -30,33 +30,52 @@ const selected = pathname === to;
 
 <style>
   .nav-item {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-  }
+    padding-block: 20px;
+    display: block;
 
-  .nav-item:is(span, a) {
-    position: relative;
-    white-space: nowrap;
+    font-size: 24px;
+    line-height: normal;
 
-    &.selected,
-    &:hover {
-      @apply text-primary;
+    &.selected {
+      text-decoration: underline;
+      text-underline-offset: 10px;
     }
   }
 
-  .nav-item:is(span, a).selected:after,
-  .nav-item:is(span, a):hover:after,
-  .nav-item:is(button):not(.opened):hover:after {
-    @apply bg-primary;
+  @media screen(lg) {
+    .nav-item {
+      @apply text-label-medium p-0;
 
-    content: "";
-    position: absolute;
-    left: -1px;
-    right: -1px;
-    bottom: -4px;
-    height: 2px;
-    border-radius: 2px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .nav-item:is(span, a) {
+      position: relative;
+      white-space: nowrap;
+
+      &.selected,
+      &:hover {
+        @apply text-primary;
+
+        text-decoration: none;
+      }
+    }
+
+    .nav-item:is(span, a).selected:after,
+    .nav-item:is(span, a):hover:after,
+    .nav-item:is(button):not(.opened):hover:after {
+      @apply bg-primary;
+
+      content: "";
+      position: absolute;
+      left: -1px;
+      right: -1px;
+      bottom: -4px;
+      height: 2px;
+      border-radius: 2px;
+    }
   }
 </style>
