--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,17 +1,73 @@
 ---
+import Icon from "../@common/Icon.astro";
 import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItem from "./components/NavItem.astro";
 import NavItems from "./NavItems.astro";
+
+const currentPath = Astro.url.pathname.replaceAll("/", "");
 ---
 
-<header class="container">
-  <div class="outer">
-    <div class="inner">
+<header id="header" data-menu-opened="true" class="container sticky z-10 top-0">
+  <div class="outer isolate">
+    <div id="mobile-menu" class="hidden fixed top-0 w-full h-full bg-surface2">
+      <nav class="px-5 pt-[115px]">
+        <ul class="">
+          <li>
+            <NavItem to="/">Accueil</NavItem>
+          </li>
+          <li>
+            <details
+              open={currentPath.match(/(projets|temoignages)/)
+                ? "true"
+                : undefined}
+            >
+              <summary>
+                Références
+                <Icon name="arrow_drop_up" width={30} height={30} />
+              </summary>
+
+              <ul>
+                <li>
+                  <NavItem to="/projets">Projets</NavItem>
+                </li>
+                <li>
+                  <NavItem to="/temoignages">Témoignages</NavItem>
+                </li>
+              </ul>
+            </details>
+          </li>
+          <li>
+            <details
+              open={currentPath.match(/(nos-deux-profils|notre-manifeste)/)
+                ? "true"
+                : undefined}
+            >
+              <summary>
+                Team UX
+                <Icon name="arrow_drop_up" width={30} height={30} />
+              </summary>
+              <ul>
+                <li>
+                  <NavItem to="/nos-deux-profils">Nos 2 profils</NavItem>
+                </li>
+                <li>
+                  <NavItem to="/notre-manifeste">Notre manifeste</NavItem>
+                </li>
+              </ul>
+            </details>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div
+      class="relative z-10 flex items-center justify-between p-5 lg:px-10 lg:py-[22px]"
+    >
       <Logo />
 
-      <nav>
-        <ul>
+      <nav class="hidden lg:block">
+        <ul class="flex items-center gap-10">
           <li>
             <NavItem to="/">Accueil</NavItem>
           </li>
@@ -38,6 +94,16 @@ import NavItems from "./NavItems.astro";
           </li>
         </ul>
       </nav>
+
+      <button
+        id="menu-opener"
+        class="lg:hidden flex items-center gap-4 px-[15px] py-[11px] text-label-medium text-neutral4 bg-primary rounded-md"
+      >
+        <span class="text-closed">Menu</span>
+        <span class="text-opened">Fermer</span>
+        <Icon name="cross" width={26} height={20} />
+        <Icon name="hamburger" width={26} height={20} />
+      </button>
     </div>
   </div>
 </header>
@@ -46,9 +112,92 @@ import NavItems from "./NavItems.astro";
   if (!CSS.supports("animation-timeline", "scroll()")) {
     import("./scripts/sticky-header.fallback");
   }
+
+  const header = document.querySelector("#header");
+  const menuButton = document.querySelector("#menu-opener");
+
+  menuButton.addEventListener("click", () => {
+    const { menuOpened } = header.dataset;
+
+    if (menuOpened === "true") {
+      header.setAttribute("data-menu-opened", "false");
+      document.body.classList.remove("overflow-hidden");
+    } else {
+      header.setAttribute("data-menu-opened", "true");
+      document.body.classList.add("overflow-hidden");
+    }
+  });
 </script>
 
 <style>
+  header {
+    :global([astro-icon="cross"]),
+    .text-opened {
+      display: none;
+    }
+
+    &[data-menu-opened="true"] {
+      & #menu-opener {
+        @apply gap-2.5 text-primary bg-surface5;
+      }
+
+      #mobile-menu,
+      .text-opened,
+      :global([astro-icon="cross"]) {
+        display: block;
+      }
+
+      .text-closed,
+      :global([astro-icon="hamburger"]) {
+        display: none;
+      }
+    }
+  }
+
+  #mobile-menu {
+    :global([astro-icon="arrow_drop_up"]) {
+      @apply text-primary;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      & ul {
+        margin-left: 70px;
+      }
+    }
+
+    summary {
+      @apply flex items-center gap-2;
+
+      padding-block: 16px;
+      font-size: 24px;
+      line-height: normal;
+    }
+
+    details[open] {
+      :global([astro-icon="arrow_drop_up"]) {
+        transform: scaleY(-1);
+      }
+    }
+  }
+
+  @media screen(2xl) {
+    #mobile-menu {
+      display: none !important;
+    }
+
+    .outer {
+      margin-inline: -40px;
+      border-radius: 0 0 16px 16px;
+      animation: sticky-bg-white-header 1s linear forwards;
+      animation-timeline: scroll();
+      animation-range: 0px 1px;
+    }
+  }
+
   @keyframes sticky-bg-white-header {
     from {
       background: rgba(255, 255, 255, 0);
@@ -58,35 +207,5 @@ import NavItems from "./NavItems.astro";
       background: rgba(255, 255, 255, 1);
       box-shadow: 0 2px 4px 0 rgba(8, 18, 79, 0.25);
     }
-  }
-
-  header {
-    z-index: 1;
-    position: sticky;
-    top: 0;
-  }
-
-  .outer {
-    margin-inline: -40px;
-    border-radius: 0 0 16px 16px;
-    animation: sticky-bg-white-header 1s linear forwards;
-    animation-timeline: scroll();
-    animation-range: 0px 1px;
-  }
-
-  .inner {
-    display: flex;
-    align-items: center;
-    padding: 22px 40px;
-  }
-
-  nav {
-    margin-left: auto;
-  }
-
-  ul {
-    display: flex;
-    gap: 40px;
-    align-items: center;
   }
 </style>
