--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -51,6 +51,18 @@
     font-weight: 700;
   }
 
+  .text-body-medium {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+  }
+
+  .text-body-medium-bold {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 700;
+  }
+
   .text-label-large {
     font-size: 18px;
     line-height: 24px;
