--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -200,7 +200,7 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
     }
   }
 
-  @media screen(lg) {
+  @screen lg {
     header {
       background: none !important;
     }
