--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -38,6 +38,13 @@ const htmlAttributes = {
       primary: type === "primary",
       secondary: type === "secondary",
     },
+    {
+      "text-label-large": variant !== "transparent" && type === "primary",
+      "text-label-medium": variant === "transparent" && type === "secondary",
+      "text-label-medium-bold":
+        (variant !== "transparent" && type === "secondary") ||
+        (variant === "transparent" && type === "primary"),
+    },
   ],
 };
 
@@ -60,7 +67,7 @@ const iconSize = variant === "transparent" ? 18 : 24;
       border-radius: 100px;
 
       &.primary {
-        @apply px-10 py-4 gap-2.5 text-label-large text-neutral4 bg-primary hover:bg-secondary;
+        @apply px-10 py-4 gap-2.5 text-neutral4 bg-primary hover:bg-secondary;
 
         &.outlined {
           @apply text-primary bg-neutral4;
@@ -72,7 +79,7 @@ const iconSize = variant === "transparent" ? 18 : 24;
       }
 
       &.secondary {
-        @apply px-5	py-2.5 gap-1.5 text-label-medium-bold text-primary bg-neutral4;
+        @apply px-5	py-2.5 gap-1.5 text-primary bg-neutral4;
       }
 
       &.primary.outlined,
@@ -103,11 +110,11 @@ const iconSize = variant === "transparent" ? 18 : 24;
       @apply gap-2 underline-offset-[4px] hover:underline;
 
       &.primary {
-        @apply text-primary text-label-medium-bold;
+        @apply text-primary;
       }
 
       &.secondary {
-        @apply text-secondary text-label-medium;
+        @apply text-secondary;
       }
     }
   }
