--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -37,7 +37,6 @@ const { title, items } = Astro.props;
     document.querySelectorAll<HTMLButtonElement[]>("button.nav-item");
 
   buttons.forEach((button) => {
-    const svg = button.querySelector<HTMLOrSVGElement>("svg");
     const submenu = button.querySelector<HTMLDivElement>(".submenu-container");
 
     let timer;
@@ -105,6 +104,12 @@ const { title, items } = Astro.props;
 </script>
 
 <style>
+  :global(button.nav-item) {
+    :global([astro-icon="arrow_drop_down"]) {
+      @apply text-primary;
+    }
+  }
+
   :global(button.nav-item.opened) {
     :global([astro-icon="arrow_drop_down"]) {
       transform: rotateZ(180deg);
