homapge: mobile hero

--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -5,26 +5,28 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 import DuoDeChoc from "../../DuoDeChoc.astro";
 ---
 
-<section class="overflow-hidden mt-[129px]">
-  <div class="container relative pb-[137px]">
+<section class="overflow-hidden mt-[60px] 2xl:mt-[129px]">
+  <div class="container relative 2xl:pb-[137px]">
     <BackgroundForm1
       class="hidden lg:block absolute top-[140px] right-[-470px] z-[-1] rotate-[-30.785deg]"
     />
 
     <Grid>
-      <h1 class="2xl:col-start-2 2xl:col-span-9 mb-8 text-display-large">
+      <h1
+        class="col-span-full 2xl:col-start-2 2xl:col-span-9 mb-10 2xl:mb-8 text-display-large"
+      >
         Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
           >designers UX seniors en freelance</span
         >
       </h1>
-      <div class="2xl:col-start-2 2xl:col-span-6">
-        <p class="our-work mb-5 text-body-extra-large">
+      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6">
+        <p class="our-work mb-5 text-body-large 2xl:text-body-extra-large">
           Notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
           adorons construire ou déconstruire.
         </p>
 
-        <p class="text-body-large mb-10">
+        <p class="text-body-large-bold 2xl:text-body-large mb-10">
           Nous livrons un design accessible et le plus sobre possible.
         </p>
 
